# yeti

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  SConstruct  TODO
docs/: Doxyfile
inc/yeti/: color.h  log_data.h  log_level.h  logger.h  macro.h  mainpage.h  yeti-inl.h  yeti.h
src/: SConscript  logger.cc  logger.h  yeti.cc
tests/: CMakeLists.txt  SConscript  output_test.cc  test_environment.cc  test_performance.cc  yeti_interface.cc  yeti_log_level.cc  yeti_set_log_colored.cc
